# nn-tools

./: README.md  regex_cheatcode.txt  test_matmul.py
keras-code-generator/: README.md
miopen-scripts/: README.md  alexnet.sh  dmnet.sh  generate_report.py  inception_v2.sh  inceptionv4.sh  resnet101.sh  resnet152.sh  resnet50.sh  vgg16.sh
miopen-scripts/inference/: densenet.sh  googlenet.sh  vgg19.sh
miopen-scripts/train/: alexnet_1024_fp16.sh  alexnet_1024_fp32.sh  alexnet_512_fp16.sh  alexnet_512_fp32.sh  densenet121_128_fp16.sh  densenet121_128_fp32.sh  densenet121_64_fp16.sh  densenet121_64_fp32.sh  resnet101_128_fp16.sh  resnet101_128_fp32.sh  resnet101_64_fp16.sh  resnet101_64_fp32.sh  resnet152_128_fp16.sh  resnet152_128_fp32.sh  resnet152_64_fp16.sh  resnet152_64_fp32.sh  resnet50_128_fp16.sh  resnet50_128_fp32.sh  resnet50_64_fp16.sh  resnet50_64_fp32.sh  squeezenet_128_fp16.sh  squeezenet_128_fp32.sh  squeezenet_256_fp16.sh  vgg16_128_fp16.sh  (+8 more)
pd-disagg/: run_accuracy.sh  run_docker.sh  run_serving_benchmark.sh  run_sglang_deocde.sh  run_sglang_prefill.sh  run_sglang_prefill_acc.sh  run_sglang_prefill_serving.sh  set_envs.sh  start_etcd.sh
protobuf-visualizer/: README.md  bin2proto.cpp
quick-scripts/: convert_rocblas_bench_to_hipblaslt_bench.py  extract_rocblas_bench_ll2_train.py  generate_hipblaslt_bench_result_summary.py  generate_rocblas_bench_result_summary.py
rawcmp/: CMakeLists.txt  rawcmp.cpp
setup-files/: install_docker.sh
setup-ubuntu-cuda/: instructions.txt
summary-generator/: generate_profile_summary.py
vim-config/: setup-vim.sh
